[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "anyNote2_MichaVardy"
version = "0.0.1"
authors = [
  { name="micha vardy", email="michavardy@gmail.com" },
]
description = "note taking cli app"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.scripts]
anyNote = "src.main"

[project.urls]
"Homepage" = "https://github.com/michavardy/anyNote2"
"Bug Tracker" = "https://github.com/michavardy/anyNote2/issues"